k8s/eks-grpcserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: development
  labels:
    app: backend
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: backend
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
      - name: grpc-hello-world
        image: 616247551677.dkr.ecr.ap-southeast-3.amazonaws.com/grpc-hello-world
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: development

spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-044888367fdde3ab0,subnet-0ddf48ee197d61e53
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-3:616247551677:certificate/46b75628-22f0-4633-a6b9-35b8a3aef189
  labels:
    app: backend-ingress
    environment: dev
  name: backend-ingress
  namespace: development
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8888
