k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: grpc-ingress
#   namespace: development
#   annotations:
#     nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
# spec:
#   ingressClassName: nginx
#   rules:
#   -  http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: backend-service
#             port:
#               number: 8888

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-044888367fdde3ab0,subnet-0ddf48ee197d61e53
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-3:616247551677:certificate/46b75628-22f0-4633-a6b9-35b8a3aef189
  labels:
    app: backend-ingress
    environment: dev
  name: backend-ingress
  namespace: development
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8888
